--- a/transit/index.html
+++ b/transit/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="transit.css">
 	<script type="text/javascript" src="transit.js"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+	<script type="text/javascript" scr="linedata.json"></script>
 </head>
 
 
@@ -15,4 +16,4 @@
 	<div id="map-canvas"></div>
 </body>
 
-</html> 
+</html>
