fixed validation error, one last save in case something happens

--- a/transit/index.html
+++ b/transit/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title>MBTA Transit</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<link rel="stylesheet" type="text/css" href="transit.css">
 	<script type="text/javascript" src="transit.js"></script>
